# SDCS

./: .gitignore  Makefile.am  SDCS.ndoc  SDCS.sln  configure.in
SDCSClient/: .cvsignore  .gitignore  Application.cs  AssemblyInfo.cs  ClientNetwork.cs  IMWindow.cs  IMWindow.resx  MainList.cs  MainList.resx  Makefile.am  SDCSClient.csproj  buddyClass.cs  compile  frmClient.cs  frmClient.resx  frmConnectToServer.cs  frmConnectToServer.resx  loginForm.cs  loginForm.resx
SDCSCommon/: .cvsignore  AssemblyInfo.cs  CryptoFunctions.cs  Makefile.am  Network.cs  SDCSCommon.csproj  compile
SDCSServer/: .gitignore  ConnectionWatcher.cs  Makefile.am  SDCSServer.csproj  ServerDatabase.cs  ServerNetwork.cs  UserDatabase.Designer.cs  UserDatabase.cs  UserDatabase.xsd  UserDatabase.xsx  compile  frmServer.cs  frmServer.resx
doc/: .cvsignore  Documentation.chm
