AC_INIT(SDCSCommon/Network.cs)
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE(SDCS,1.0)

AC_PROG_INSTALL

dnl C# compiler
AC_PATH_PROG(CSC, csc, no)
AC_PATH_PROG(MCS, gmcs, no)
AC_PATH_PROG(MONO, mono, no)

CS="C#"
if test "x$CSC" = "xno" -a "x$MCS" = "xno" ; then
	AC_MSG_ERROR([No $CS compiler found])
fi

if test "x$MCS" = "xno" ; then
	MCS=$CSC
fi

if test "x$MONO" = "xno" ; then
	AC_MSG_ERROR([No mono runtime found])
fi

AC_SUBST(MCS)

AC_OUTPUT([
Makefile
SDCSCommon/Makefile
SDCSClient/Makefile
SDCSServer/Makefile
])

